- bugfix: app was launching with a 20px white gap at the bottom, but now auth page is rendered fully fullscreen - bugfix: body background-color is black so animation caused by device orientation changes look nicely without appearing white background

--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -46,6 +46,8 @@
     padding-left: 40px
     @media screen and (max-width: $breakpoint-sm-max)
       padding-left: 16px
+#q-app
+  background-color: #ffffff
 .q-btn-toggle
   border-width: 1px
   border-style: solid
@@ -84,6 +86,7 @@
     content: counter(intervention) ". "
 body
   counter-reset: always
+  background-color: #000000
 .counter:before
   counter-increment: always
   content: counter(always) ". "
